--- a/docs/node/docs/pages/api/whatsabi-integration.mdx
+++ b/docs/node/docs/pages/api/whatsabi-integration.mdx
@@ -137,7 +137,7 @@ One of the most powerful features of Contract Loader in Tevm is the ability to i
 </Callout>
 
 <Callout type="warning">
-  Macros use the [Import Attributes syntax](https://github.com/tc39/proposal-import-attributes), a Stage 3 TC39 proposal that lets you attach metadata to import statements (`with {type: 'macro'}`). For security reasons, macros are disabled by default and must be enabled by adding `"macros": true` to your `tevm.config.json` file.
+  Macros use the [Import Attributes syntax](https://github.com/tc39/proposal-import-attributes), a Stage 3 TC39 proposal that lets you attach metadata to import statements (`with {type: 'tevm'}`). For security reasons, macros are disabled by default and must be enabled by adding `"macros": true` to your `tevm.config.json` file.
 </Callout>
 
 ### Creating Contract Macros
@@ -167,33 +167,34 @@ const loaders = [
   new EtherscanABILoader({ apiKey: 'YOUR_ETHERSCAN_KEY' })
 ]
 
-// Export a function that returns a single contract
-export async function usdcContract() {
-  return loadContract(client, {
-    address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48', // USDC on Ethereum
-    followProxies: true,
-    loaders
-  })
-}
+// Using top-level await to pre-load contracts
+// Note: This requires Node.js 14.8+ or setting "module": "esnext" in tsconfig
+// Directly export the contract instances
+export const usdc = await loadContract(client, {
+  address: '0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48', // USDC on Ethereum
+  followProxies: true,
+  includeBytecode: true,
+  includeSourceCode: true,
+  loaders
+})
 
-// Export a different contract (one macro function per contract)
-export async function wethContract() {
-  return loadContract(client, {
-    address: '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2', // WETH on Ethereum
-    followProxies: true,
-    loaders
-  })
-}
+export const weth = await loadContract(client, {
+  address: '0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2', // WETH on Ethereum
+  followProxies: true,
+  includeBytecode: true,
+  includeSourceCode: true,
+  loaders
+})
 ```
 
 ### Using Contract Macros
 
-Then import the contracts with `with {type: 'macro'}` attribute:
+Then import the contracts with `with { type: 'tevm' }` attribute:
 
 ```ts showLineNumbers filename="app.js"
 // Import contracts using macros
-import { usdcContract } from './contract-macros.js' with { type: 'macro' }
-import { wethContract } from './contract-macros.js' with { type: 'macro' }
+import { usdc } from './contract-macros.js' with { type: 'tevm' }
+import { weth } from './contract-macros.js' with { type: 'tevm' }
 import { createMemoryClient } from 'tevm'
 
 // Create client for local interaction
@@ -201,13 +202,13 @@ const client = createMemoryClient()
 
 // Use the contracts with full type safety
 const usdcBalance = await client.readContract({
-  ...usdcContract.read.balanceOf('0x123...'),
-  address: usdcContract.address
+  ...usdc.read.balanceOf('0x123...'),
+  address: usdc.address
 })
 
 // WETH contract methods are fully typed
 const wethDeposit = await client.writeContract({
-  ...wethContract.write.deposit(),
+  ...weth.write.deposit(),
   value: 1000000000000000000n
 })
 ```
@@ -272,6 +273,8 @@ The `loadContract` action accepts the following parameters:
 |-----------|------|-------------|
 | `address` | `Address` | **Required**. The contract address to analyze |
 | `followProxies` | `boolean` | Whether to automatically follow proxy contracts. Default: `false` |
+| `includeBytecode` | `boolean` | Whether to include contract bytecode in the returned contract. Default: `false` |
+| `includeSourceCode` | `boolean` | Whether to include contract source code as [SolcInputSources](https://github.com/evmts/tevm-monorepo/blob/00e1397cf07f637a93b7eaf51178bda50f5c5d6e/bundler-packages/solc/src/solcTypes.ts#L319). Default: `false` |
 | `loaders` | `ABILoader[]` | Array of ABI loaders to use for resolving contract ABIs. See [Available Loaders](#available-loaders) |
 | `enableExperimentalMetadata` | `boolean` | Whether to include experimental metadata like event topics. Default: `false` |
 | `signatureLookup` | `SignatureLookup \| false` | Custom signature lookup or `false` to disable. Default: uses WhatsABI's default lookup |
@@ -292,6 +295,7 @@ The action returns a full [Tevm Contract](/reference/contract) instance with the
 | `withAddress` | `Function` | Method to create a new instance with a different address |
 | `abiLoadedFrom` | `{name: string, url?: string}` | Information about where the ABI was loaded from |
 | `proxyDetails` | `Array<{name: string, implementation?: Address, selector?: string}>` | If the contract is a proxy, details about the proxy implementation |
+| `sources` | `SolcInputSources` | If `includeSourceCode` is `true`, contains the contract source code files |
 
 ## Available Loaders
 
@@ -443,19 +447,19 @@ const loaders = [
   })
 ]
 
-// Export a single contract as a macro function
-export async function aaveV3Pool() {
-  return loadContract(client, {
-    address: '0x794a61358D6845594F94dc1DB02A252b5b4814aD', // Aave V3 Pool on Optimism
-    followProxies: true,
-    loaders
-  })
-}
+// Directly export the contract instance using top-level await
+export const aaveV3Pool = await loadContract(client, {
+  address: '0x794a61358D6845594F94dc1DB02A252b5b4814aD', // Aave V3 Pool on Optimism
+  followProxies: true,
+  includeBytecode: true,
+  includeSourceCode: true,
+  loaders
+})
 ```
 
 ```ts showLineNumbers filename="app.js"
-// Import with macro attribute
-import { aaveV3Pool } from './aave-macro.js' with { type: 'macro' }
+// Import with tevm attribute
+import { aaveV3Pool } from './aave-macro.js' with { type: 'tevm' }
 import { createPublicClient, http } from 'viem'
 import { optimism } from 'viem/chains'
 
@@ -509,6 +513,51 @@ const name = await client.readContract({
 })
 
 console.log(`Contract name: ${name}`)
+```
+
+### Working with Source Code
+
+```ts showLineNumbers filename="source-code-example.ts"
+import { loadContract, createMemoryClient } from 'tevm'
+import { http } from 'viem'
+import { SourcifyABILoader, EtherscanABILoader } from 'tevm/contract-loaders'
+
+const client = createMemoryClient({ fork: { transport: http('https://mainnet.infura.io/v3/YOUR-KEY') } })
+
+// Load a contract with source code included
+const contract = await loadContract(client, {
+  address: '0xVerifiedContractAddress',
+  followProxies: true,
+  includeBytecode: true,
+  includeSourceCode: true,
+  loaders: [
+    new SourcifyABILoader(),
+    new EtherscanABILoader({ apiKey: 'YOUR_ETHERSCAN_KEY' })
+  ]
+})
+
+// Check if source code was retrieved
+if (contract.sources) {
+  console.log('Source files available:')
+  // Log the names of the source files
+  Object.keys(contract.sources).forEach(fileName => {
+    console.log(`- ${fileName}`)
+    
+    // Access the source content
+    const sourceContent = contract.sources[fileName].content
+    console.log(`First 100 chars: ${sourceContent.substring(0, 100)}...`)
+  })
+  
+  // Use the source code for integration with tools, compilation, etc.
+  // For example, you could write it to a file for local development
+  // Or use it for analysis, documentation generation, etc.
+}
+
+// You can still use the contract for interactions as usual
+const balance = await client.readContract({
+  ...contract.read.balanceOf('0x123...'),
+  address: contract.address
+})
 ```
 
 ### Progress Tracking for Large Contracts
