--- a/docs/node/docs/pages/getting-started/bundler.mdx
+++ b/docs/node/docs/pages/getting-started/bundler.mdx
@@ -457,7 +457,7 @@ import { createMemoryClient } from 'tevm'
 import { http } from 'viem'
 import { mainnet, optimism } from 'viem/chains'
 import { loadContract } from 'tevm'
-import { SourcifyABILoader, EtherscanABILoader } from 'tevm/contract-loaders'
+import { SourcifyABILoader, EtherscanABILoader } from 'tevm/whatsabi'
 
 // Set up clients for different networks
 // For reproducible builds, use fixed block heights
