--- a/docs/node/pages/api/whatsabi-integration.mdx
+++ b/docs/node/pages/api/whatsabi-integration.mdx
@@ -85,7 +85,7 @@ Contract Loaders are powerful [actions](/reference/actions) that can extract ABI
   <div data-title="Tree-shakable API">
     ```ts showLineNumbers {1,3-4,7-10,12-13,24-28} filename="contract-loader-example.ts"
     import { loadContract, createMemoryClient, http } from 'tevm'
-    import { MultiABILoader, EtherscanABILoader, SourcifyABILoader } from 'tevm/contract-loaders'
+    import { MultiABILoader, EtherscanABILoader, SourcifyABILoader } from 'tevm/whatsabi'
     
     // You can also use viem's createClient here
     const client = createMemoryClient({ // [!code focus]
@@ -124,7 +124,7 @@ Contract Loaders are powerful [actions](/reference/actions) that can extract ABI
     ```ts showLineNumbers {1-2,4-10,13-14,17-22} filename="contract-loader-extension.ts"
     import { createClient, contractLoaderExtension } from 'tevm' // [!code focus]
     import { http } from 'viem' // [!code focus]
-    import { BlockscoutABILoader, SourcifyABILoader } from 'tevm/contract-loaders' // [!code focus]
+    import { BlockscoutABILoader, SourcifyABILoader } from 'tevm/whatsabi' // [!code focus]
     
     // Configure loaders and other options in the extension // [!code focus]
     const client = createClient({ // [!code focus]
@@ -191,7 +191,7 @@ import { createClient, createMemoryClient } from "tevm";
 import { http } from "viem";
 import { mainnet } from "viem/chains";
 import { loadContract } from "tevm";
-import { EtherscanABILoader, SourcifyABILoader } from "tevm/contract-loaders";
+import { EtherscanABILoader, SourcifyABILoader } from "tevm/whatsabi";
 
 // For hermetic builds, use a memory client with a fork at specific block
 // This ensures deterministic builds with reproducible contract data
@@ -364,7 +364,7 @@ These are [WhatsABI loaders](https://github.com/shazow/whatsabi) that are re-exp
 Tries multiple ABI loaders until a result is found.
 
 ```ts
-import { MultiABILoader } from "tevm/contract-loaders";
+import { MultiABILoader } from "tevm/whatsabi";
 
 // Create loader that tries multiple sources in order
 const loader = new MultiABILoader([
@@ -384,7 +384,7 @@ const contract = await loadContract(client, {
 Loads contract ABIs from Etherscan and similar explorers.
 
 ```ts
-import { EtherscanABILoader } from "tevm/contract-loaders";
+import { EtherscanABILoader } from "tevm/whatsabi";
 
 // For Etherscan on Ethereum mainnet
 const etherscan = new EtherscanABILoader({
@@ -403,7 +403,7 @@ const polygonscan = new EtherscanABILoader({
 Loads contract ABIs from Sourcify's decentralized repository.
 
 ```ts
-import { SourcifyABILoader } from "tevm/contract-loaders";
+import { SourcifyABILoader } from "tevm/whatsabi";
 
 // Default configuration uses public Sourcify endpoint
 const sourcify = new SourcifyABILoader();
@@ -419,7 +419,7 @@ const customSourcify = new SourcifyABILoader({
 Loads contract ABIs from Blockscout explorers.
 
 ```ts
-import { BlockscoutABILoader } from "tevm/contract-loaders";
+import { BlockscoutABILoader } from "tevm/whatsabi";
 
 // For default Blockscout
 const blockscout = new BlockscoutABILoader({
@@ -439,7 +439,7 @@ const customBlockscout = new BlockscoutABILoader({
 ```ts showLineNumbers {1-2,4,6-11,13-15} filename="proxy-resolution.ts"
 import { loadContract, createMemoryClient } from "tevm";
 import { http } from "viem";
-import { SourcifyABILoader, EtherscanABILoader } from "tevm/contract-loaders";
+import { SourcifyABILoader, EtherscanABILoader } from "tevm/whatsabi";
 
 const client = createMemoryClient({
   fork: { transport: http("https://mainnet.infura.io/v3/YOUR-KEY") },
@@ -497,7 +497,7 @@ import { createClient } from "tevm";
 import { http } from "viem";
 import { optimism } from "viem/chains";
 import { loadContract } from "tevm";
-import { SourcifyABILoader, EtherscanABILoader } from "tevm/contract-loaders";
+import { SourcifyABILoader, EtherscanABILoader } from "tevm/whatsabi";
 
 // Client for the Optimism network
 const client = createClient({
@@ -554,7 +554,7 @@ import {
   SourcifyABILoader,
   EtherscanABILoader,
   BlockscoutABILoader,
-} from "tevm/contract-loaders";
+} from "tevm/whatsabi";
 
 const client = createMemoryClient({
   fork: { transport: http("https://mainnet.infura.io/v3/YOUR-KEY") },
@@ -589,7 +589,7 @@ console.log(`Contract name: ${name}`);
 ```ts showLineNumbers filename="source-code-example.ts"
 import { loadContract, createMemoryClient } from "tevm";
 import { http } from "viem";
-import { SourcifyABILoader, EtherscanABILoader } from "tevm/contract-loaders";
+import { SourcifyABILoader, EtherscanABILoader } from "tevm/whatsabi";
 
 const client = createMemoryClient({
   fork: { transport: http("https://mainnet.infura.io/v3/YOUR-KEY") },
@@ -636,7 +636,7 @@ const balance = await client.readContract({
 ```ts showLineNumbers {5-14,17-22} filename="progress-tracking.ts"
 import { loadContract, createMemoryClient } from "tevm";
 import { http } from "viem";
-import { SourcifyABILoader } from "tevm/contract-loaders";
+import { SourcifyABILoader } from "tevm/whatsabi";
 
 // Custom progress tracker
 const progressTracker = (phase, ...args) => {
