--- a/docs/node/pages/reference/bundler/overview.mdx
+++ b/docs/node/pages/reference/bundler/overview.mdx
@@ -244,7 +244,7 @@ import { createMemoryClient } from 'tevm'
 import { http } from 'viem'
 import { mainnet } from 'viem/chains'
 import { loadContract } from 'tevm'
-import { SourcifyABILoader, EtherscanABILoader } from 'tevm/contract-loaders'
+import { SourcifyABILoader, EtherscanABILoader } from 'tevm/whatsabi'
 
 // For hermetic builds, use a memory client with fixed block height
 const client = createMemoryClient({
