more docs updates

--- a/docs/node/docs/pages/introduction/why-run-ethereum-in-js.mdx
+++ b/docs/node/docs/pages/introduction/why-run-ethereum-in-js.mdx
@@ -12,12 +12,8 @@ import { Card, TabGroup, FileTree } from "../../../components";
 # Why Run An Ethereum Node in JavaScript?
 
 > You know what would make solving all these problems trivially easy? If we just were able to use Foundry in the browser
->
-> - Fucory the day he started building Tevm
 
-[Fucory](https://x.com/fucory) created Tevm to solve all UX and Devx issues blocking the delivery of great blockchain apps. The original idea was to put the foundry API in the browser and the library evolved from there.
-
-Because of Tevm's wide ambitious scope Tevm's use case is simply TypeScript+EVM. If you are building on the EVM and you are using TypeScript Tevm will help you. And here is why.
+This is what [Fucory](https://x.com/fucory) thought the day he started building Tevm. Fucory created Tevm to solve all UX and Devx issues blocking the delivery of great blockchain apps. The original idea was to put the foundry API in the browser and the library evolved from there. Because of Tevm's wide ambitious scope Tevm's use case is simply TypeScript+EVM. If you are building on the EVM and you are using TypeScript Tevm will help you. And here is why.
 
 > We believe every TypeScript user of the EVM who installs Viem will also install Tevm alongside it in the future
 
